Added Sign out menu item in MainActivity and EventsActivity.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,6 @@
 	<string name="current_events">Current Events</string>
 	<string name="past_events">Past Events</string>
 	<string name="future_events">Future Events</string>
+	<string name="sign_out">Sign Out</string>
 
 </resources>
